--- a/src/assets/toolkit/styles/0-core/variables/_variables.grid.scss
+++ b/src/assets/toolkit/styles/0-core/variables/_variables.grid.scss
@@ -23,14 +23,17 @@ $neat-grid: (
 
 @mixin grid-doubles() {
   @include grid-column( 6, $neat-grid );
+  &:nth-child( 2n+1 ) { clear: left; }
 }
 
 @mixin grid-triples() {
   @include grid-column( 4, $neat-grid );
+  &:nth-child( 3n+1 ) { clear: left; }
 }
 
 @mixin grid-quadruples() {
   @include grid-column( 3, $neat-grid );
+  &:nth-child( 4n+1 ) { clear: left; }
 }
 
 
