--- a/src/assets/toolkit/styles/5-objects/_objects.media.scss
+++ b/src/assets/toolkit/styles/5-objects/_objects.media.scss
@@ -62,3 +62,16 @@ img:first-child {
 
 
 
+
+/*= ANY MEDIA ================================================================*/
+
+
+figure {
+  .formatting .grid & {
+    margin-bottom: $gap-vertical;
+  }
+}
+
+
+
+
