--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -487,98 +487,73 @@ $promo-max-width:   60em;
 
   // image with offset title and text on right
   &.title-image {
-      background-color: $white;
+    background-color: $white;
+
+    // 1st column
+    figure {
+      overflow: unset;
+      box-shadow: none;
+
+      img { width: 100%; }
+
+      figcaption {
+        margin: 0;
+        padding: 1em;
+        width: 100%;
+        background-color: $green-brand;
+
+        h1,
+        h2,
+        h3 {
+          margin-bottom: 0;
+          color: $white;
+        }
+      }
+    }
+
+    // 2nd column
+    section {
+      width: 100%;
+
+      p { font-size: 1.2rem; }
+    }
+
+    @include breakpoint( desktop ) {
+      figure figcaption {
+        position: absolute;
+        top: 10%;
+        left: 0;
+        margin-left: $bleed-horizontal / 2;
+        max-width: 90%;
+      }
+    }
+
+    @include breakpoint( tablet ) {
       > div {
-          display: flex;
-          align-items: center;
+        display: flex;
+        align-items: center;
       }
-      figure {
-          box-shadow: none;
-          padding: 1em;
-          //@include span-columns( 5 of 12, block-collapse);
-          flex: 1 0 auto;
 
-          img {
-              width: 100%;
-          }
-          figcaption {
-              position: absolute;
-              background-color: $green-brand;
-              width: 100%;
-              max-width: 85%;
-              padding: 1em;
-              left: 0;
-              top: 2em;
-
-              h1,
-              h2,
-              h3 {
-                  color: $white;
-                  margin-bottom: 0;
-              }
-
-          }
-
-      }
+      figure { width: 40%; }
 
       section {
-          width: 100%;
-          padding: 1em 1em 1em 2em;
-
-          p {
-              font-size: 1.2rem;
-          }
+        padding-left: $gap-vertical;
+        width: 60%;
       }
+    }
 
-      @include breakpoint( $until: desktop ) {
-
-          > div {
-              align-items: stretch;
-          }
-
-          figure {
-              display: flex;
-              flex-direction: column;
-
-              img {
-                  // position: absolute;
-                  // bottom: 5%;
-                  flex-shrink: 0;
-                  padding-left: 1em;
-              }
-
-              figcaption {
-                  // bottom: 6%;
-                  // top: unset;
-                  position: relative;
-                  top: 0;
-                  order: -1;
-                  margin-right: auto;
-                  max-width: 94%;
-              }
-          }
+    @include breakpoint( $until: desktop ) {
+      figure {
+        display: flex;
+        flex-direction: column-reverse;
       }
+    }
 
-      @include breakpoint( $until: tablet ) {
-
-          > div {
-              flex-direction: column;
-
-              figure {
-                  width: 100%;
-
-                  img {
-                      padding-left: 0;
-                  }
-
-                  figcaption {
-                      bottom: 0;
-                      max-width: 100%;
-                  }
-              }
-          }
+    @include breakpoint( $until: tablet ) {
+      figure {
+        margin-bottom: $gap-content;
       }
-
+    }
 
   }
 }
