--- a/src/assets/toolkit/styles/6-components/_components.search-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.search-panel.scss
@@ -1,6 +1,6 @@
 /** Search panel full page with or mods. */
 
-$search-panel-shadow: 0 4px 8px rgba( $black, .2 ) !default;
+$search-panel-shadow: $shadow-shallow !default;
 
 
 .search-panel {
